<resources>
    <string name="app_name">wikipedia</string>
    <string name="toolbar_title">WikipediA</string>
    <string name="define">is a free online encyclopedia</string>
    <string name="writer">Be a writer</string>
    <string name="login">Login</string>
    <string name="wikibooks">Wikibooks</string>
    <string name="other_products">Other products</string>
    <string name="wikinews">WikiNews</string>
    <string name="wikidata">Wikidata</string>
    <string name="closeMenu">close menu</string>
    <string name="startMenu">start menu</string>
    <string name="explore">Explore</string>
    <string name="trend">Trend</string>
    <string name="saved">Saved</string>
    <string name="edits">Edits</string>
    <string name="profile">Profile</string>
    <string name="content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="red_dead">Red Dead Redemption 2</string>
    <string name="video_game">Video Game</string>
    <string name="number">1</string>
    <string name="content_info">Red Dead Redemption 2[a] is a 2018 action-adventure game developed and published by Rockstar Games. The game is the third entry in the Red Dead series and is a prequel to the 2010 game Red Dead Redemption. The story is set in 1899 and follows the exploits of outlaw Arthur Morgan, a member of the Van der Linde gang, in a fictionalized representation of the Western, Midwestern, and Southern United States. Arthur must deal with the decline of the Wild West whilst attempting to survive against government forces, rival gangs, and other adversaries. The game\'s epilogue follows fellow gang member John Marston, the protagonist of Red Dead Redemption.</string>
    <string name="open_link">Open Link</string>
    <string name="search">Search</string>
    <string name="phone_number">09912066410</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_subject">Enter your subject</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="confirm">CONFIRM</string>
</resources>