<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/login_item"
        android:title="@string/login"
        android:icon="@drawable/ic_baseline_login_24"
        app:iconTint="@color/black_200"
        />

    <item
        android:id="@+id/wikibooks_item"
        android:title="@string/wikibooks"
        android:icon="@drawable/ic_baseline_library_books_24"
        app:iconTint="@color/black_200"
        />

    <item
        android:id="@+id/writer_item"
        android:title="@string/writer"
        android:icon="@drawable/ic_baseline_edit_24"
        app:iconTint="@color/black_200"
        />

    <item
        android:title="@string/other_products">

        <menu>

            <item
                android:id="@+id/wikinews_item"
                android:title="@string/wikinews"
                android:icon="@drawable/ic_baseline_open_in_new_24"
                app:iconTint="@color/black_200"
                />

            <item
                android:id="@+id/wikidata_item"
                android:title="@string/wikidata"
                android:icon="@drawable/ic_baseline_open_in_new_24"
                app:iconTint="@color/black_200"
                />

        </menu>

    </item>

</menu>