<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/mainSecondAppbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/mainSecondCollapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ToolbarWikipedia"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/black_100"
            app:title="@string/app_name"
            >

            <ImageView
                android:id="@+id/mainSecondHeaderImage"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:src="@drawable/background"
                android:scaleType="fitXY"
                app:layout_collapseMode="parallax"
                />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/mainSecondToolBar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:layout_collapseMode="pin"
                />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/mainSecondNestedScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        >

        <LinearLayout
            android:id="@+id/mainSecondNestedLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="16dp"
            >

            <TextView
                android:id="@+id/mainSecondTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red_dead"
                android:textSize="24sp"
                android:textColor="@color/black_200"
                android:layout_marginTop="8dp"
                />

            <TextView
                android:id="@+id/mainSecondSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video_game"
                android:textSize="18sp"
                android:textColor="@color/gray_white"
                android:layout_marginTop="4dp"
                />

            <TextView
                android:id="@+id/mainSecondContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_info"
                android:textSize="17sp"
                android:textColor="@color/black_100"
                android:lineSpacingExtra="2.5dp"
                android:layout_marginTop="8dp"
                />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/mainSecondFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/open_link"
        app:srcCompat="@drawable/ic_baseline_link_24"
        app:tint="@color/white"
        app:backgroundTint="@color/blue"
        app:useCompatPadding="true"
        app:layout_anchor="@id/mainSecondAppbarLayout"
        app:layout_anchorGravity="bottom|end"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>