<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profileBottomSheetName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_name"
        android:textColorHint="@color/black_200"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        app:hintTextColor="@color/black_100"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        app:startIconTint="@color/black_100"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profileBottomSheetSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_subject"
        android:textColorHint="@color/black_200"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        app:hintTextColor="@color/black_100"
        app:startIconDrawable="@drawable/ic_baseline_library_books_24"
        app:startIconTint="@color/black_100"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profileBottomSheetPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_phone_number"
        android:textColorHint="@color/black_100"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        app:hintTextColor="@color/black_100"
        app:startIconDrawable="@drawable/ic_baseline_phone_android_24"
        app:startIconTint="@color/black_100"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profileBottomSheetEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email_address"
        android:textColorHint="@color/black_100"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        app:hintTextColor="@color/black_100"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconTint="@color/black_100"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>