<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/materialCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:clickable="true"
    android:focusable="true"
    android:checkable="true"
    app:strokeWidth="1dp"
    app:strokeColor="@color/gray_white"
    app:cardElevation="8dp"
    app:cardCornerRadius="4dp"
    app:rippleColor="@color/blue"
    app:checkedIconTint="@color/blue"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/trendImageView"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:srcCompat="@tools:sample/avatars"
            />

        <TextView
            android:id="@+id/trendPostId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/number"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:background="@drawable/circle"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/trendTitleView"
            app:layout_constraintBottom_toBottomOf="@+id/trendTitleView"
            />

        <TextView
            android:id="@+id/trendTitleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginTop="16dp"
            android:text="@string/red_dead"
            android:textSize="20sp"
            android:textColor="@color/black_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/trendSubtitleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/video_game"
            android:textSize="14sp"
            android:textColor="@color/black_100"
            app:layout_constraintStart_toStartOf="@+id/trendTitleView"
            app:layout_constraintTop_toBottomOf="@+id/trendTitleView"
            />

        <TextView
            android:id="@+id/trendInsight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/trend"
            android:textSize="16sp"
            android:textColor="@android:color/holo_green_dark"
            android:drawableStart="@drawable/ic_baseline_trending_up_24"
            android:drawableTint="@android:color/holo_green_dark"
            app:layout_constraintStart_toStartOf="@+id/trendSubtitleView"
            app:layout_constraintTop_toBottomOf="@+id/trendSubtitleView"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>