<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/materialCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:clickable="true"
    android:focusable="true"
    android:checkable="true"
    app:strokeWidth="1dp"
    app:strokeColor="@color/gray_white"
    app:cardElevation="8dp"
    app:cardCornerRadius="4dp"
    app:contentPaddingBottom="16dp"
    app:rippleColor="@color/blue"
    app:checkedIconTint="@color/blue"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/savedPostImageView"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            >

            <TextView
                android:id="@+id/savedPostTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red_dead"
                android:textColor="@color/black_200"
                android:textSize="24sp"
                android:layout_marginStart="16dp"
                android:layout_gravity="start|center_vertical"
                />

            <ImageView
                android:id="@+id/savedDropDownMenu"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_three_dots"
                />

        </FrameLayout>

        <TextView
            android:id="@+id/savedPostSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_game"
            android:textColor="@color/black_200"
            android:textSize="14sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            />

        <View
            android:layout_width="96dp"
            android:layout_height="0.5dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:alpha="0.5"
            android:background="@color/black_100"
            />

        <TextView
            android:id="@+id/savedPostContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content"
            android:textColor="@color/black_100"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:lineSpacingExtra="4dp"
            />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>